fixing stretching image on smallest vpt

--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -588,7 +588,7 @@ iframe, article.col-md-6 {
 
 img {
 &.mobilisima {
-  max-width: 400px;
+  max-width: 320px;
   margin: 50px auto 0 auto;
   }
   }
